<resources>
    <string name="app_name" translatable="false">Specspulse</string>

    <string name="spec_icon">Specs Icon</string>
    <string name="see_more">See More</string>
    <string name="see_less">See Less</string>

    <string name="action_search">Search</string>

    <string name="nav_menu">Manufacturers</string>
    <string name="nav_trending">Trending</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_night">Night Mode</string>
    <string name="full_list">Expand List</string>
    <string name="collapse_list">Collapse List</string>

    <string name="most_recent">Most Recent</string>
    <string name="action_filter">Filter</string>
    <string name="device_name">Search By Name…</string>
    <string name="action_list">Show as List</string>
    <string name="action_grid">Show as Grid</string>

    <string name="retry">Retry</string>
    <string name="text_placeholder_error">An error has occurred</string>

    <string name="base_url" translatable="false">http://specspulse.aba.ae/</string>
    <string name="ad_id" translatable="false">ca-app-pub-9586068579198360/9480046966</string>
</resources>