<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manu"
            android:icon="@drawable/info_smartphone"
            android:title="@string/nav_menu"/>
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_trending"
            android:title="@string/nav_trending"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history"/>
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/nav_night"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
            android:title="@string/nav_night"
            app:showAsAction="always"/>
    </group>
</menu>